--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,53 +1,43 @@
-.principal{
-        width: 100%;
-        height: 100%;
-        margin-top: 150px;
-        padding: 15px;
-
+main {
+  display: flex;
+  width: 100%;
+  height: 100%;
 }
-.nome{
-        display: flex;
-        margin-left: 80px;
+.nome {
+  color: #fff;
+  font-size: 55pt;
+  flex-direction: column;
+  text-align: left;
+  margin-top: 15%;
+  margin-left: 100px;
+  font-family: "Raleway", sans-serif;
 }
-.foto img{
-        width: 500px;
-        height: 500px;
-        display: flex;
-        margin: auto;
-    border-radius: 50% ;
-    cursor: pointer;
+.redes {
+  width: 350px;
+  height: 100px;
+  border-radius: 80px;
+  border: 1px solid #ffffff60;
+  background-color: rgba(0, 0, 0, 0.144);
+  margin-top: 20px;
+  z-index: 0;
+  display: grid;
+  display: flex;
+  
 }
-.fotoPrincipal{
-        background-image:url('../imgs/4.jpg') ;
-        background-repeat:no-repeat;
-
-}
-.fotoPrincipal2{
-        background-image:url('../imgs/3.jpg') ;
-        background-repeat:no-repeat;
-        border-radius: 50% 15px;
-
-}
-.nome h1{
-        font-size: 80pt;
-        font-family: "Roboto Mono", monospace;
-        font-weight: 300;
-
-}
-.nomes h3{
-margin-top: 30px;
-font-size: 30pt;
-font-weight: 600;
-font-family: "Roboto Mono", monospace;
+.redes img {
+  width: 50px;
+  border-radius: 50%;
+  border: 1px solid #fff;
+  padding: 5px;
 }
 
-
-.foto :hover{
-opacity: 85%;
-transition: 0.8s;
+.redes img:hover{
+padding: 0px;
+transition: 0.5s;
 
 }
-.mudarFundo *{
-        background-color: #000;
-        color: #fff;
+.fotoPerfil{
+margin-top: 200px;
+opacity: 20%;
+display: grid;
 }
